# kvstore

./: .gitignore  Cargo.toml  README.md
src/: api.rs  cli.rs  core.rs  main.rs  util.rs
src/api/: app.rs  mod.rs  rouille.rs
src/cli/: command.rs  mod.rs
src/cli/command/: runner.rs
src/core/: storage.rs
src/core/storage/: file.rs
