[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.70", features = ["backtrace"] }
bincode = "1.3.3"
bytes = {version = "1.4.0" , features = ["serde"] }
chrono = "0.4.24"
clap = "4.2.1"
lru = "0.10.0"
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"

